--- a/views/bookshelf.html
+++ b/views/bookshelf.html
@@ -1,14 +1,17 @@
 <div class="bookshelf row">
 
-  <!-- 
-  TODO: Loop through myBooks and display each one with this HTML
-  <div class="book col-md-3">
+  <div ng-repeat="book in myBooks">
+
     <a href="#/books/{{$index}}">
-      TODO: Add the book's cover here
-      <h3 class="title">  </h3>
-      <p class="author">  </p>
+      <div class="book col-md-3">  
+
+        <img ng-src="{{ book.cover }}">
+        <h3 class="title"> {{ book.title }} </h3>
+        <p class="author"> {{ book.author }} </p>
+
+      </div>
     </a>
+
   </div>
-  -->
 
 </div>
